# criper-mcp

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  fs-patch-tests
.github/workflows/: release.yml
include/: mcp_server.hpp
include/criper/: fs_tool_registry.hpp  fs_tools.hpp  fs_tools_support.hpp  logger.hpp  sandbox.hpp  sandbox_setup.hpp
src/: main.cpp  mcp_server.cpp  sandbox.cpp  sandbox_setup.cpp
src/fs_tools/: dispatcher.cpp  fs_chmod.cpp  fs_copy.cpp  fs_exec.cpp  fs_find.cpp  fs_grep.cpp  fs_list.cpp  fs_mkdir.cpp  fs_move.cpp  fs_patch.cpp  fs_read.cpp  fs_remove.cpp  fs_stat.cpp  fs_tail.cpp  fs_write.cpp  git.cpp  support.cpp
tests/: fs_patch_tests.cpp  git_tool_tests.cpp
